RESOLVED FIXED185559
System preview badge doesn't show on <picture> elements
https://bugs.webkit.org/show_bug.cgi?id=185559
Summary System preview badge doesn't show on <picture> elements
Dean Jackson
Reported 2018-05-11 13:10:52 PDT
System preview badge doesn't show on <picture> elements
Attachments
Patch (1.80 KB, patch)
2018-05-11 13:14 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2018-05-11 13:11:34 PDT
Dean Jackson
Comment 2 2018-05-11 13:14:38 PDT
Dean Jackson
Comment 3 2018-05-11 13:19:04 PDT
Note You need to log in before you can comment on or make changes to this bug.