System preview badge doesn't show on <picture> elements https://bugs.webkit.org/show_bug.cgi?id=185559 <rdar://problem/40150066>

Reviewed by Tim Horton.

We should also identify <img>s that are the child of a <picture>
contained inside the appropriate <a> element.

Tested internally, since the badge is platform specific.

* html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::isSystemPreviewImage const): Add logic
to look for <picture> parents.

Canonical link: https://commits.webkit.org/201046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231716 268f45cc-cd09-0410-ab3c-d52691b4dbfc