Source/WebCore/html/HTMLImageElement.cpp
@@ -687,9 +687,11 @@ bool HTMLImageElement::willRespondToMouseClickEvents()
 bool HTMLImageElement::isSystemPreviewImage() const
 {
     const auto* parent = parentElement();
-    if (!is<HTMLAnchorElement>(parent))
-        return false;
-    return downcast<HTMLAnchorElement>(parent)->isSystemPreviewLink();
+    if (is<HTMLAnchorElement>(parent))
+        return downcast<HTMLAnchorElement>(parent)->isSystemPreviewLink();
+    if (is<HTMLPictureElement>(parent))
+        return downcast<HTMLPictureElement>(parent)->isSystemPreviewImage();
+    return false;
 }
 #endif
 
